--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,35 @@
 {
-"update_url": "https://clients2.google.com/service/update2/crx",
+  "manifest_version": 3,
+  "minimum_chrome_version": "30",
 
-   "background": {
-      "page": "background.html"
-   },
-   "browser_action": {
-      "default_icon": "img/icon.png",
-      "default_popup": "popup.html"
-   },
-   "description": "网页媒体嗅探工具",
-   "icons": {
-      "40": "img/icon.png",
-      "48": "img/icon.png",
-      "128": "img/icon128.png"
-   },
-   "manifest_version": 2,
-   "minimum_chrome_version": "30",
-   "name": "猫抓",
-   "options_page": "options.html",
-   "permissions": [ "tabs", "webRequest", "*://*/*", "<all_urls>", "downloads"],
-   "version": "1.0.16"
+  "name": "蜘蛛 - 网络资源抓取",
+  "version": "1.0.0",
+  "description": "媒体资源嗅探下载",
+  "icons": {
+    "16": "img/icons/16x17.png",
+    "32": "img/icons/32x34.png",
+    "64": "img/icons/64x67.png",
+    "128": "img/icons/128x133.png"
+  },
+
+  "options_page": "options.html",
+  "background": {
+    "type": "module",
+    "service_worker": "service-worker.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "img/icons/128x133.png"
+  },
+  "permissions": [
+    "tabs",
+    "storage",
+    "downloads",
+    "webRequest",
+    "contextMenus",
+    "notifications"
+  ],
+  "host_permissions": [
+    "*://*/*"
+  ]
 }
